fixed spacing

--- a/_sass/sections/events.scss
+++ b/_sass/sections/events.scss
@@ -26,7 +26,7 @@ section.events {
 	.event-callout {
 		flex: 1 1 300px;
 		margin: 10px;
-		padding: 20px 40px;
+		padding: 40px 40px;
 	}
 
 
