--- a/_sass/structure.scss
+++ b/_sass/structure.scss
@@ -60,4 +60,9 @@ h4 {
 	display: inline-block;
 	padding: 10px 20px;
 	font-weight: bold;
+	margin: 0;
+}
+
+strong {
+	color: $brand-color;
 }
